--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,6 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/food_donation
 spring.datasource.username = root
 spring.datasource.password = Ashok@437
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = true
+eureka.client.service-url.defaultZone=http://localhost:8761/registry/eureka
